--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "husky": "^4.3.0",
     "lint-staged": "^9.5.0",
+    "prettier": "^2.1.2",
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
