--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.17.3",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
+    "jquery": "^3.5.1",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
@@ -45,5 +46,8 @@
       "vue-cli-service lint",
       "git add"
     ]
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.1.3"
   }
 }
