--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.5.1",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
+    "vue-pincode-input": "^0.3.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
